--- a/index.html
+++ b/index.html
@@ -1,268 +1,97 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Le Côme – Gîte d’exception dans un cadre naturel exceptionnel</title>
-  <meta name="description" content="Le Côme – Gîte pour 10 personnes, proche de Vulcania, au cœur du Parc des Volcans d’Auvergne. Contactez-nous pour votre séjour." />
-  <meta name="format-detection" content="telephone=no" />
-  <!-- Open Graph -->
-  <meta property="og:title" content="Le Côme – Gîte d’exception" />
-  <meta property="og:description" content="Gîte pour 10 personnes, proche de Vulcania, Parc des Volcans d’Auvergne." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="photo/image_P.jpeg" />
-  <meta property="og:url" content="https://fab-63.github.io/site_web_gite/" />
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E🏡%3C/text%3E%3C/svg%3E" />
+  <title>Le Côme – Gîte en Auvergne</title>
+  <meta name="description" content="Bienvenue au gîte Le Côme, proche de Vulcania, jusqu’à 10 personnes.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg: #0b0b0b;    /* body background */
-      --fg: #101418;    /* card/background */
-      --ink: #0f172a;   /* text dark */
-      --ink-weak:#475569; /* muted */
-      --brand:#0ea5e9;  /* accent */
-      --brand-ink:#0a4d69; /* darker accent for focus */
-      --paper:#ffffff;  /* text light */
-      --radius: 18px;
-      --shadow: 0 10px 20px rgba(0,0,0,.12), 0 6px 6px rgba(0,0,0,.08);
-    }
+    :root{ --green:#2E8B57; --beige:#F5F5DC; --text:#222; --gray:#e7e9ee; --header-h:240px; --sidebar-w:220px; --radius:14px; --shadow:0 10px 20px rgba(0,0,0,.08),0 2px 6px rgba(0,0,0,.06); }
+    @media (max-width:900px){ :root{ --header-h:160px; --sidebar-w:0px; } }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0}
-    body{
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
-      color: var(--ink);
-      background: linear-gradient(180deg,#f8fafc, #eef2f7);
-      line-height:1.6;
-    }
-    a{color:var(--brand); text-decoration:none}
-    a:hover{text-decoration:underline}
-    .container{max-width:1120px;margin-inline:auto;padding:0 20px}
-
+    html,body{height:100%}
+    body{margin:0;font-family:'Open Sans',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;color:var(--text);background:#fafbfc;line-height:1.6}
+    h1,h2,h3{font-family:'Montserrat','Open Sans',Arial,sans-serif;color:#14302a;margin:0 0 .5em}
+    a{color:#0a6375;text-decoration:none} a:hover{text-decoration:underline}
+    /* Skip link */
+    .skip-link{position:absolute;left:12px;top:12px;z-index:1100;padding:6px 10px;background:#fff;border:2px dashed #0ea5e9;border-radius:10px;transform:translateY(-200%)}
+    .skip-link:focus{transform:translateY(0);outline:none}
     /* Header */
-    header{
-      position:sticky; top:0; z-index:10;
-      backdrop-filter:saturate(180%) blur(10px);
-      background: rgba(255,255,255,.75);
-      border-bottom:1px solid #e5e7eb;
+    header.site-header{position:fixed;inset:0 0 auto 0;height:var(--header-h);z-index:1000;color:#fff;display:grid;align-content:end;padding:18px 18px 20px 18px;background-position:center;background-size:cover;background-repeat:no-repeat;
+      background-image:image-set(url('photo/Image_P.webp') type('image/webp') 1x, url('photo/Image_P.jpg') type('image/jpeg') 1x);
+      background-color:#1f2937;
     }
-    .nav{
-      display:flex; align-items:center; gap:16px; justify-content:space-between;
-      padding:10px 0;
+    header.site-header::after{content:"";position:absolute;inset:0;z-index:-1;background:linear-gradient(180deg,rgba(0,0,0,.30),rgba(0,0,0,.45))}
+    .header-inner{display:flex;align-items:flex-end;justify-content:space-between;gap:12px}
+    .brand{display:grid;gap:6px}
+    .brand-title{font-weight:700;letter-spacing:.4px}
+    .brand-sub{opacity:.95;font-weight:600}
+    .hamburger{display:none;align-self:flex-start;background:rgba(255,255,255,.85);color:#0f172a;border:1px solid rgba(255,255,255,.7);border-radius:12px;padding:8px 10px;box-shadow:var(--shadow)}
+    @media (max-width:900px){ .hamburger{display:inline-flex} }
+    .hamburger:focus-visible{outline:3px solid #0ea5e9;outline-offset:2px}
+    /* Sidebar */
+    nav.sidebar{position:fixed;top:var(--header-h);left:0;bottom:0;z-index:900;width:220px;background:#fff;border-right:1px solid var(--gray);padding:14px;overflow-y:auto;box-shadow:var(--shadow)}
+    .menu{display:grid;gap:8px}
+    .menu a{display:block;padding:10px 12px;border:1px solid var(--gray);border-radius:10px;background:#fdfdfd;font-weight:600}
+    .menu a:hover{background:#f7faf7}
+    .menu a.active{background:#eef7f1;border-color:#c9e6d2;box-shadow:inset 0 0 0 2px rgba(46,139,87,.12)}
+    @media (max-width:900px){ nav.sidebar{transform:translateX(-100%);transition:transform .2s ease} :root[data-sidebar-open="true"] nav.sidebar{transform:translateX(0)}
+      .scrim{position:fixed;inset:var(--header-h) 0 0 0;background:rgba(0,0,0,.35);z-index:850;display:none}
+      :root[data-sidebar-open="true"] .scrim{display:block}
     }
-    .brand{display:flex; align-items:center; gap:12px; font-weight:700}
-    .brand .logo{width:36px;height:36px; display:grid; place-items:center; background:#e2f3fb; border-radius:12px; box-shadow:var(--shadow)}
-    .brand span{font-size:1.1rem}
-    .actions{display:flex; align-items:center; gap:12px}
-    .btn, button.btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      border:1px solid #dbeafe; background:#e0f2fe; color:#0c4a6e;
-      padding:10px 14px; border-radius:14px; font-weight:600; cursor:pointer;
-      transition: transform .06s ease, box-shadow .2s ease, background .2s ease;
-      box-shadow: 0 1px 0 rgba(0,0,0,.05);
-      white-space:nowrap;
-    }
-    .btn:hover{transform: translateY(-1px)}
-    .btn.primary{background:var(--brand); color:white; border-color:#7dd3fc}
-    .btn.primary:hover{box-shadow:var(--shadow)}
-    .lang-switch{border:1px solid #e5e7eb; background:#fff; color:#0f172a}
-
-    /* Hero */
-    .hero{position:relative; overflow:hidden; border-bottom-left-radius: var(--radius); border-bottom-right-radius: var(--radius)}
-    .hero .media{position:relative; height:66vh; min-height:420px; max-height:760px; border-bottom:1px solid #e5e7eb}
-    .hero img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover; filter: saturate(105%) contrast(102%)}
-    .hero .overlay{position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.15), rgba(0,0,0,.35))}
-    .hero .content{position:absolute; inset:0; display:grid; place-items:center; text-align:center; color:#fff; padding:24px}
-    .hero h1{font-size: clamp(2rem, 3.4vw + 1rem, 3.4rem); margin:0 0 8px 0; letter-spacing:.4px}
-    .hero p{font-size: clamp(1rem, .8vw + .6rem, 1.3rem); opacity:.95; margin:0 0 18px}
-    .hero .cta{display:flex; gap:10px; justify-content:center; flex-wrap:wrap}
-
-    /* Sections */
-    section{padding:56px 0}
-    .cards{display:grid; grid-template-columns: repeat(12, 1fr); gap:16px}
-    .card{grid-column: span 12; background:#fff; border:1px solid #e5e7eb; border-radius:var(--radius); padding:20px; box-shadow:var(--shadow)}
-    .card.compact{padding:16px}
-    @media(min-width:720px){ .card{grid-column: span 4} }
-
-    /* Contact */
-    .contact{
-      display:grid; gap:18px; grid-template-columns:1fr; align-items:start
-    }
-    @media(min-width:860px){
-      .contact{grid-template-columns: 1.2fr .8fr}
-    }
-    .info{background:#fff; border:1px solid #e5e7eb; border-radius:var(--radius); padding:20px; box-shadow:var(--shadow)}
-    .info dl{display:grid; grid-template-columns: max-content 1fr; gap:8px 16px; margin:0}
-    .info dt{font-weight:700}
-    .info dd{margin:0}
-
+    /* Main */
+    main#main{position:relative;margin-top:var(--header-h);margin-left:var(--sidebar-w);padding:20px 24px;min-height:calc(100vh - var(--header-h))}
+    @media (max-width:900px){ main#main{margin-left:0} }
+    .card{background:#fff;border:1px solid var(--gray);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px}
+    /* Photos grid */
+    .photo-grid{display:grid;gap:10px;grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
+    .photo-grid img{width:100%;height:auto;border-radius:10px;border:1px solid var(--gray)}
     /* Footer */
-    footer{border-top:1px solid #e5e7eb; background:#fbfdff; color:#334155}
-    footer .foot{display:flex; justify-content:space-between; align-items:center; gap:12px; padding:18px 0; font-size:.95rem}
-    .muted{color:#64748b}
-
-    /* Lang helpers */
-    [data-lang]{display:none}
-    :root[data-ui-lang="fr"] [data-lang="fr"],
-    :root[data-ui-lang="en"] [data-lang="en"]{display:initial}
+    footer{padding:16px 24px;border-top:1px solid var(--gray);color:#56616d;background:#ffffff}
   </style>
-  <script>
-    // Simple FR/EN toggle without dependencies
-    document.documentElement.setAttribute('data-ui-lang', localStorage.getItem('ui-lang') || 'fr');
-    function setLang(lang){
-      document.documentElement.setAttribute('data-ui-lang', lang);
-      localStorage.setItem('ui-lang', lang);
-    }
-  </script>
-  <!-- Schema.org for a lodging business -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LodgingBusiness",
-    "name": "Le Côme",
-    "description": "Gîte pour 10 personnes, proche de Vulcania, dans le Parc des Volcans d’Auvergne.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "6 Rue des toblancs",
-      "addressLocality": "Saint Ours",
-      "postalCode": "63230",
-      "addressCountry": "FR"
-    },
-    "telephone": "+33 6 74 92 56 13",
-    "image": ["photo/image_P.jpeg"],
-    "areaServed": "Auvergne",
-    "url": "https://fab-63.github.io/site_web_gite/"
-  }
-  </script>
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="brand" aria-label="Le Côme">
-        <div class="logo" aria-hidden="true">🏡</div>
-        <span>Le Côme</span>
+  <a class="skip-link" href="#main">Passer au contenu</a>
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <div class="brand">
+        <div class="brand-title">Le Côme – Gîte</div>
+        <div class="brand-sub">Un gîte d’exception dans un cadre naturel exceptionnel</div>
       </div>
-      <nav class="actions" aria-label="Navigation principale">
-        <a class="btn" href="#atouts" data-lang="fr">Atouts</a>
-        <a class="btn" href="#atouts" data-lang="en">Highlights</a>
-        <a class="btn" href="#contact" data-lang="fr">Contact</a>
-        <a class="btn" href="#contact" data-lang="en">Contact</a>
-        <button class="btn lang-switch" onclick="setLang('fr')" aria-label="Passer en français">FR</button>
-        <button class="btn lang-switch" onclick="setLang('en')" aria-label="Switch to English">EN</button>
-        <a class="btn primary" href="#contact" data-lang="fr">Nous contacter</a>
-        <a class="btn primary" href="#contact" data-lang="en">Get in touch</a>
-      </nav>
+      <button id="menuToggle" class="hamburger" aria-controls="sidebar" aria-expanded="false" aria-label="Ouvrir le menu">☰ Menu</button>
     </div>
   </header>
-
-  <main>
-    <!-- HERO -->
-    <section class="hero" aria-label="Image d’en-tête">
-      <div class="media">
-        <!-- Replace with your optimized WebP later: photo/image_P.webp -->
-        <img src="photo/image_P.jpeg" alt="Le Côme – gîte niché dans un cadre naturel en Auvergne" width="1920" height="1080" loading="eager" />
-        <div class="overlay" aria-hidden="true"></div>
-      </div>
-      <div class="content">
-        <div>
-          <h1 data-lang="fr">Un gîte d’exception dans un cadre naturel exceptionnel</h1>
-          <h1 data-lang="en">An exceptional holiday home in a stunning natural setting</h1>
-          <p data-lang="fr">Proche de Vulcania, au cœur du Parc des Volcans d’Auvergne – 10 personnes</p>
-          <p data-lang="en">Near Vulcania, in the Auvergne Volcanoes Regional Park – up to 10 guests</p>
-          <div class="cta">
-            <a class="btn primary" href="#contact" data-lang="fr">Nous contacter</a>
-            <a class="btn primary" href="#contact" data-lang="en">Contact us</a>
-            <a class="btn" href="#atouts" data-lang="fr">Découvrir les atouts</a>
-            <a class="btn" href="#atouts" data-lang="en">See the highlights</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- HIGHLIGHTS / ATOUTS -->
-    <section id="atouts" class="container" aria-label="Atouts">
-      <div class="cards" role="list">
-        <article class="card compact" role="listitem">
-          <h3 data-lang="fr">Proche de Vulcania</h3>
-          <h3 data-lang="en">Close to Vulcania</h3>
-          <p data-lang="fr">Explorez le célèbre parc Vulcania à quelques minutes du gîte.</p>
-          <p data-lang="en">Visit the renowned Vulcania park just a short drive away.</p>
-        </article>
-        <article class="card compact" role="listitem">
-          <h3 data-lang="fr">Parc des Volcans d’Auvergne</h3>
-          <h3 data-lang="en">Auvergne Volcanoes Park</h3>
-          <p data-lang="fr">Séjournez au cœur d’un cadre naturel préservé et grandiose.</p>
-          <p data-lang="en">Stay in the heart of a breathtaking and preserved natural area.</p>
-        </article>
-        <article class="card compact" role="listitem">
-          <h3 data-lang="fr">Jusqu’à 10 personnes</h3>
-          <h3 data-lang="en">Up to 10 guests</h3>
-          <p data-lang="fr">Idéal pour les familles et les groupes, confort et espace garantis.</p>
-          <p data-lang="en">Perfect for families and groups, with comfort and plenty of space.</p>
-        </article>
-      </div>
-    </section>
-
-    <!-- ABOUT (placeholder minimal) -->
-    <section class="container" aria-label="À propos">
-      <div class="card">
-        <h2 data-lang="fr">Bienvenue au gîte “Le Côme”</h2>
-        <h2 data-lang="en">Welcome to “Le Côme”</h2>
-        <p data-lang="fr">Un point de chute idéal pour découvrir l’Auvergne, ses volcans, ses lacs et ses villages. Nous peaufinerons cette section après la page d’accueil (photos, description détaillée, équipements, accès, etc.).</p>
-        <p data-lang="en">A perfect base to explore Auvergne, its volcanoes, lakes and villages. We’ll refine this section later with photos, detailed description, amenities and access.</p>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="container" aria-label="Contact">
-      <div class="contact">
-        <div class="info">
-          <h2 data-lang="fr">Nous contacter</h2>
-          <h2 data-lang="en">Get in touch</h2>
-          <p data-lang="fr" class="muted">Chantal et Fabrice ROSSI</p>
-          <p data-lang="en" class="muted">Chantal and Fabrice ROSSI</p>
-          <dl>
-            <dt data-lang="fr">Adresse</dt>
-            <dt data-lang="en">Address</dt>
-            <dd>6 Rue des toblancs, 63230 Saint Ours, France</dd>
-
-            <dt data-lang="fr">Téléphone</dt>
-            <dt data-lang="en">Phone</dt>
-            <dd><a href="tel:+33674925613" rel="nofollow">06 74 92 56 13</a></dd>
-
-            <dt>Email</dt>
-            <dd><a href="mailto:fabrice.rossi63@gmail.com">fabrice.rossi63@gmail.com</a></dd>
-          </dl>
-          <div style="margin-top:12px; display:flex; gap:10px; flex-wrap:wrap">
-            <a class="btn primary" href="mailto:fabrice.rossi63@gmail.com" data-lang="fr">Écrire un email</a>
-            <a class="btn primary" href="mailto:fabrice.rossi63@gmail.com" data-lang="en">Send an email</a>
-            <a class="btn" href="tel:+33674925613" data-lang="fr">Appeler</a>
-            <a class="btn" href="tel:+33674925613" data-lang="en">Call</a>
-          </div>
-        </div>
-        <div class="card">
-          <h3 data-lang="fr">Formulaire (optionnel)</h3>
-          <h3 data-lang="en">Form (optional)</h3>
-          <p data-lang="fr" class="muted">On pourra ajouter un formulaire simple (Netlify Forms, Formspree, ou GitHub Actions) si tu veux recevoir les demandes directement via le site.</p>
-          <p data-lang="en" class="muted">We can add a simple form (Netlify Forms, Formspree, or GitHub Actions) if you want to receive requests directly.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container foot">
-      <div>
-        <strong>Le Côme</strong> — <span data-lang="fr">Gîte d’exception en Auvergne</span><span data-lang="en">Exceptional holiday home in Auvergne</span>
-      </div>
-      <div class="muted">© <span id="year"></span> Le Côme</div>
+  <nav id="sidebar" class="sidebar" aria-label="Navigation" role="navigation">
+    <div class="menu">
+      <a href="description.html" class="">Description</a>
+      <a href="photos.html" class="">Photos</a>
+      <a href="contact.html" class="">Contact</a>
+      <a href="video.html" class="">Vidéo</a>
     </div>
+  </nav>
+  <div class="scrim" hidden></div>
+  <main id="main" tabindex="-1">
+    <div class="card">
+<h1>Gîte Le Côme</h1>
+<p>Un gîte d’exception dans un cadre naturel exceptionnel.</p>
+<p>Bienvenue sur notre site. Découvrez la description du gîte, parcourez quelques photos, contactez-nous pour toute question, et visionnez une courte vidéo de présentation.</p>    </div>
+  </main>
+  <footer role="contentinfo">
+    Contact — Tél : <a href="tel:+33674925613">06 74 92 56 13</a> · Email : <a href="mailto:fabrice.rossi63@gmail.com">fabrice.rossi63@gmail.com</a>
   </footer>
-
   <script>
-    // Current year
-    document.getElementById('year').textContent = new Date().getFullYear();
-    // Reduce CLS for the hero by waiting image ready
-    const heroImg = document.querySelector('.hero img');
-    heroImg?.addEventListener('load', () => heroImg.style.opacity = 1);
+    (function(){
+      const root=document.documentElement;
+      const menuToggle=document.getElementById('menuToggle');
+      const scrim=document.querySelector('.scrim');
+      function openSidebar(){ root.setAttribute('data-sidebar-open','true'); menuToggle.setAttribute('aria-expanded','true'); scrim.removeAttribute('hidden'); }
+      function closeSidebar(){ root.removeAttribute('data-sidebar-open'); menuToggle.setAttribute('aria-expanded','false'); scrim.setAttribute('hidden',''); }
+      menuToggle?.addEventListener('click',()=>{ const exp=menuToggle.getAttribute('aria-expanded')==='true'; exp?closeSidebar():openSidebar(); });
+      scrim?.addEventListener('click', closeSidebar);
+    })();
   </script>
 </body>
 </html>
